[package]
name = "zcash-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
orchard = "0.9.0"
zcash_note_encryption = "0.4"
zcash_address = "0.6"

[[bin]]
name = "zcash-enclave"
path = "src/main.rs"