[package]
name = "zcash-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
zcash_note_encryption = "0.4"
zcash_address = "0.6"

# http
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
actix-web = "4.4"
dotenv = "0.15"

# Zcash
zcash_primitives = "0.15"
orchard = "0.9.0"

# Cryptography
pasta_curves = "0.5"
group = "0.13"
ff = "0.13"
blake2b_simd = "1.0"
chacha20poly1305 = "0.10"
subtle = "2.4"

# gRPC
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"

# Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-stream = "0.1"
actix-cors = "0.7.1"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "zcash-enclave"
path = "src/main.rs"
